[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "our-db"
version = "0.1.0"
description = "Database connectivity and configuration brick"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chris Jacobs" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ourochronos/our-db"
Repository = "https://github.com/ourochronos/our-db"

[project.optional-dependencies]
async = [
    "asyncpg>=0.29.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/our_db"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["our_db"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "psycopg2",
    "psycopg2.*",
    "asyncpg",
    "asyncpg.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require external services)",
    "slow: Slow tests (>5s)",
]

[tool.coverage.run]
branch = true
source = ["src/our_db"]

[tool.coverage.report]
show_missing = true
